HUB-3-D-T-91
style(backend): rubocop

also removed redundant Store::Resource.find on conversion page

fix Link in LogoSign

basic ssr setup; axios and openapi client need handling

fixup server.ts

rename entry to page

remove body classes from rails responsibility; add classes to body on frontend based on page property in Route handle

apply Inter var font; import style.css; return body classes in layouts

simplify client components libraries import

add isBrowser util; rename redirect.ts to useNavigate.ts

remove Contacts page

fix server regex in prerender.js

HUB-3-D-T-91--ssr_render

add comment

fixup! node:fs/promises
reworked prerender const paths

node:fs/promises

prettify prerender

fixup! fix openapi-generator FILES
fixup! fix openapi-generator FILES
fixup! fix openapi-generator FILES
fixup! fix openapi-generator FILES
fixup! fix openapi-generator FILES
fixup! fix openapi-generator FILES
fixup! fix openapi-generator FILES
fix openapi-generator FILES

ssg try

2 separate client entrypoints with hydrate and render Root, separate layout.html in rails; dummy Contacts page; patched Link and useNavigate from react-router-dom



Merge-request: HUB-3-D-MR-69
Merged-by: Marina Starostina <starostinamb@gmail.com>
removed resource, version and files from render_page

wip(ssr): pass cookie to ssr

from rails to ssr
from ssr to rails in axios client

add comment about pass auth cookie to ssr

remove unnecessary json wrapping from ssr html

fix useWebsocket dynamic import ActionCable

chore: probably fix vite dev server not visible outside docker

main idea, vite is visible if it prints:
 ➜  Local:   http://localhost:3036/vite-dev/
 ➜  Network: http://172.24.0.17:3036/vite-dev/
both local and network, not only local

fix: pass different basePath to Client

if server we pass backend:3050, also nginx should work

basic ssr setup; axios and openapi client need handling



Merge-request: HUB-3-D-MR-68
Merged-by: Kirill Salikhov <Kirill.Salikhov@gmail.com>
bystro fiks

add
