# backend/app/controllers/api/resources_controller.rb
@@ -1,0 +1,17 @@
+class Api::ResourcesController < Api::ApplicationController
+  before_action :set_resource
+
+  def show
+    authorize(@resource)
+    render json: Store::ResourceBlueprint.render(@resource, view: :normal, user: pundit_user)
+  end
+
+  private
+
+  def set_resource
+    # @type [Store::Resource]
+    @resource = Store::Resource
+      .includes(:share_options)
+      .find(params[:id])
+  end
+end
