# backend/swagger/v1/swagger.yaml
@@ -15,28 +15,28 @@ paths:
           content:
             application/json:
               example:
-              - id: 6de8429c-606f-4ba8-9cb9-5762c1ace200
+              - id: 6428c1f8-d79d-4d03-a648-ee178d0836f1
                 status: inProgress
                 progress: '0.0'
-                start_time: 2024-03-15 11:01:19 UTC
+                start_time: 2024-03-22 11:27:19 UTC
                 end_time: 
-                conversion_job_id: e8cad449-8667-4f88-b90b-2eef3ac254fd
-                created_at: 2024-03-15 11:01:19 UTC
-                updated_at: 2024-03-15 11:01:19 UTC
+                conversion_job_id: 58a277c9-bd17-4769-9e5c-e8fe14b757ec
+                created_at: 2024-03-22 11:27:19 UTC
+                updated_at: 2024-03-22 11:27:19 UTC
                 meta:
-                  dest_resource_id: 95287e37-92b8-4445-b8e0-4fab8257b218
-                  dest_version_id: d5a797c8-85e4-49fb-bffe-fd055024c335
-              - id: f1c60da7-a685-445c-aab4-71746d611284
+                  dest_resource_id: 7e4f026d-15be-4330-9209-ff31fd964077
+                  dest_version_id: d9e6769b-a6b8-4d82-addd-256b63635187
+              - id: 39730e2c-21bf-4eec-83c0-eaaeeca260b2
                 status: inProgress
                 progress: '0.0'
-                start_time: 2024-03-15 11:01:19 UTC
+                start_time: 2024-03-22 11:27:19 UTC
                 end_time: 
-                conversion_job_id: 73666278-b75f-4e3b-b442-51b255645ccc
-                created_at: 2024-03-15 11:01:19 UTC
-                updated_at: 2024-03-15 11:01:19 UTC
+                conversion_job_id: d0259f02-7350-4ebc-a7de-d9662492492d
+                created_at: 2024-03-22 11:27:19 UTC
+                updated_at: 2024-03-22 11:27:19 UTC
                 meta:
-                  dest_resource_id: 1f9f36db-85a9-4aa4-85e7-c0e9e9218d0c
-                  dest_version_id: 7fe3d88a-429b-4d79-b7db-35ee23ad6f76
+                  dest_resource_id: 9c3fbe37-580d-4c5f-8c5c-7712cc95e120
+                  dest_version_id: 524b0fdf-38a3-41d9-a1bc-5e4324f2103b
               schema:
                 type: array
                 items:
@@ -59,17 +59,17 @@ paths:
           content:
             application/json:
               example:
-                id: 7f23b99b-5b3f-47d2-8ddd-800ec79b6bd4
+                id: cd45b2eb-4fd2-4a1e-bae4-f7530948847e
                 status: inProgress
                 progress: '0.0'
-                start_time: 2024-03-15 11:01:19 UTC
+                start_time: 2024-03-22 11:27:19 UTC
                 end_time: 
-                conversion_job_id: a95ba7e8-f50c-40df-bbb8-83e3c047de29
-                created_at: 2024-03-15 11:01:19 UTC
-                updated_at: 2024-03-15 11:01:19 UTC
+                conversion_job_id: 13f0ca05-d15e-4fac-ac66-03097c8edf68
+                created_at: 2024-03-22 11:27:19 UTC
+                updated_at: 2024-03-22 11:27:19 UTC
                 meta:
-                  dest_resource_id: 8c29f740-66a4-486e-9f2f-2d965133f8fe
-                  dest_version_id: ae18f53b-17ab-4c4b-87ce-1989d3417d84
+                  dest_resource_id: 74331127-c7ab-47fd-b977-ae75748e3124
+                  dest_version_id: 641053bb-3c48-4b58-ba69-554318dd2181
               schema:
                 "$ref": "#/components/schemas/conversion_task"
   "/api/v1/conversions/{id}/logs":
@@ -99,17 +99,17 @@ paths:
           content:
             application/json:
               example:
-                id: ff671e2c-bbb1-4735-82bd-7fe20eeae057
+                id: d8641515-a071-4775-bd24-a45d21783286
                 status: inProgress
                 progress: '0.0'
-                start_time: 2024-03-15 11:01:19 UTC
+                start_time: 2024-03-22 11:27:19 UTC
                 end_time: 
-                conversion_job_id: ae19813e-528e-4bcb-a30e-bc9b213fc984
-                created_at: 2024-03-15 11:01:19 UTC
-                updated_at: 2024-03-15 11:01:19 UTC
+                conversion_job_id: f33694a6-75ae-444d-8915-198cc53adfe1
+                created_at: 2024-03-22 11:27:19 UTC
+                updated_at: 2024-03-22 11:27:19 UTC
                 meta:
-                  dest_resource_id: 01dc4ab4-0c55-4e0e-802c-74b28315d954
-                  dest_version_id: 8a1f4e6a-210b-410d-94b2-32853496356e
+                  dest_resource_id: 1fe66de7-8e5b-4a58-a97e-222e69a680b4
+                  dest_version_id: f5fe2024-281c-487c-84f1-06cff6d75e32
               schema:
                 "$ref": "#/components/schemas/conversion_task"
       requestBody:
@@ -123,6 +123,34 @@ paths:
                 input_file:
                   type: string
                   description: Active Storage signeID
+  "/api/v1/resources/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: Resource id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show resource
+      operationId: getResource
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+                id: 0f61d831-0668-4a78-9f74-5ea658d4b09d
+                name: saepe.ifc
+                created_at: 2024-03-22 11:27:19 UTC
+                updated_at: 2024-03-22 11:27:19 UTC
+                current_id: 
+                permissions:
+                  manage: true
+                  share: true
+                share_options:
+                  link_access: none
+                  has_link_password: false
   "/api/v1/resources/{id}/share-options":
     parameters:
     - name: id
@@ -131,6 +159,17 @@ paths:
       required: true
       schema:
         type: string
+    get:
+      summary: show resource's share_options
+      operationId: getShareOptions
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+                link_access: none
+                has_link_password: false
     patch:
       summary: update resource's share_options
       operationId: updateShareOptions
@@ -188,6 +227,44 @@ paths:
                 link_password:
                   type: string
                   format: password
+  "/api/v1/versions/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: Version id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show version
+      operationId: getVersion
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example:
+                id: adec9d58-4160-4b73-8ea8-cc4da08d00d7
+                resource_id: d2657d55-b03a-4544-9f0a-ab7e20a041ec
+                created_at: 2024-03-22 11:27:19 UTC
+                updated_at: 2024-03-22 11:27:19 UTC
+  "/api/v1/versions/{id}/files":
+    parameters:
+    - name: id
+      in: path
+      description: Version id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: files version
+      operationId: getVersionFiles
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              example: []
 components:
   schemas:
     conversion_task:
